tests/baselines/reference/contextualTypingWithGenericAndNonGenericSignature.errors.txt
tests/cases/compiler/contextualTypingWithGenericAndNonGenericSignature.ts(8,1): error TS2322: Type '<T, U>(x: string | T, y: number | U) => string | T' is not assignable to type '{ (x: string, y: number): string; <T, U>(x: T, y: U): T; }'.
  Type 'string | T' is not assignable to type 'string'.
    Type 'T' is not assignable to type 'string'.
tests/cases/compiler/contextualTypingWithGenericAndNonGenericSignature.ts(15,1): error TS2322: Type '<T, U>(x: string | T, y: number | U) => string | T' is not assignable to type '{ <T, U>(x: T, y: U): T; (x: string, y: number): string; }'.
  Type 'string | T' is not assignable to type 'string'.
    Type 'T' is not assignable to type 'string'.


==== tests/cases/compiler/contextualTypingWithGenericAndNonGenericSignature.ts (2 errors) ====
    //•	If e is a FunctionExpression or ArrowFunctionExpression with no type parameters and no parameter or return type annotations, and T is a function type with EXACTLY ONE non - generic call signature, then any inferences made for type parameters referenced by the parameters of T’s call signature are fixed(section 4.12.2) and e is processed with the contextual type T, as described in section 4.9.3.
    
    var f2: {
        (x: string, y: number): string;
        <T, U>(x: T, y: U): T
    };
    
    f2 = (x, y) => { return x }
    ~~
!!! error TS2322: Type '<T, U>(x: string | T, y: number | U) => string | T' is not assignable to type '{ (x: string, y: number): string; <T, U>(x: T, y: U): T; }'.
!!! error TS2322:   Type 'string | T' is not assignable to type 'string'.
!!! error TS2322:     Type 'T' is not assignable to type 'string'.
    
    var f3: {
        <T, U>(x: T, y: U): T
        (x: string, y: number): string;
    };
    
    f3 = (x, y) => { return x }
    ~~
!!! error TS2322: Type '<T, U>(x: string | T, y: number | U) => string | T' is not assignable to type '{ <T, U>(x: T, y: U): T; (x: string, y: number): string; }'.
!!! error TS2322:   Type 'string | T' is not assignable to type 'string'.
!!! error TS2322:     Type 'T' is not assignable to type 'string'.
    